--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "lintai"
+name = "llm-validator"
 version = "0.1.0"
 description = "AI-powered linting tool for code quality and validation"
 readme = "README.md"
